---
source: crates/pgt_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
select max(id) from users
        ↑ hovered here
```

# Hover Results
### `pg_catalog.max(bigint) → bigint`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(integer) → integer`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(smallint) → smallint`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(oid) → oid`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(real) → real`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(double precision) → double precision`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(date) → date`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(time without time zone) → time without time zone`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(time with time zone) → time with time zone`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(money) → money`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(timestamp without time zone) → timestamp without time zone`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(timestamp with time zone) → timestamp with time zone`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(interval) → interval`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(text) → text`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(numeric) → numeric`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(anyarray) → anyarray`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(character) → character`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(tid) → tid`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(inet) → inet`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(pg_lsn) → pg_lsn`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(xid8) → xid8`  
#### Aggregate - Immutable - Security INVOKER  
---    


---

### `pg_catalog.max(anyenum) → anyenum`  
#### Aggregate - Immutable - Security INVOKER  
---
